--- a/requirements.txt
+++ b/requirements.txt
@@ -27,10 +27,12 @@ cupshelpers==1.0
 daphne==3.0.2
 dbus-python==1.2.16
 defer==1.0.6
+defusedxml==0.7.1
 distlib==0.3.1
 distro==1.4.0
 distro-info===0.23ubuntu1
 Django==3.2.6
+django-allauth==0.45.0
 django-cors-headers==3.8.0
 duplicity==0.8.12.0
 entrypoints==0.3
@@ -94,7 +96,7 @@ pycups==1.9.73
 PyDispatcher==2.0.5
 PyDrive==1.3.1
 PyGObject==3.36.0
-PyJWT==1.7.1
+PyJWT==2.1.0
 pymacaroons==0.13.0
 PyNaCl==1.3.0
 pyOpenSSL==19.0.0
@@ -102,6 +104,7 @@ pyRFC3339==1.1
 python-apt==2.0.0+ubuntu0.20.4.5
 python-dateutil==2.7.3
 python-debian===0.1.36ubuntu1
+python3-openid==3.2.0
 pytz==2019.3
 pyxdg==0.26
 PyYAML==5.3.1
@@ -110,6 +113,7 @@ regex==2021.3.17
 reportlab==3.5.34
 reqtry==0.0.2
 requests==2.24.0
+requests-oauthlib==1.3.0
 requests-unixsocket==0.2.0
 rsa==4.0
 scapy==2.4.5
@@ -117,6 +121,8 @@ SecretStorage==2.3.1
 service-identity==18.1.0
 simplejson==3.16.0
 six==1.14.0
+social-auth-app-django==5.0.0
+social-auth-core==4.1.0
 soupsieve==2.2.1
 speedtest-cli==2.1.3
 SQLAlchemy==1.3.12
